--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="my.apps"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="gToDo" android:icon="@drawable/icon">
+    <application android:label="gToDo" android:icon="@drawable/icon" android:debuggable="true">
         <activity android:name="GToDoActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -12,4 +12,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 </manifest> 
