--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,4 +14,5 @@
     </application>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-</manifest> 
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
