--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
       package="my.apps"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="gToDo" android:icon="@drawable/icon" android:debuggable="true">
+    <application android:label="gToDo" android:icon="@drawable/icon" android:debuggable="true"
+            android:name="GToDoApplication">
         <activity android:name="GToDoActivity"
                   android:label="@string/app_name">
             <intent-filter>
